--- a/src/Xutim/Bundle/CoreBundle/assets/admin/styles/app.css
+++ b/src/Xutim/Bundle/CoreBundle/assets/admin/styles/app.css
@@ -79,6 +79,11 @@ th[title] {
     cursor: help;
 }
 
+.help-hint {
+    text-decoration: underline dotted;
+    cursor: help;
+}
+
 .btn-link {
     text-decoration: none;
 }
