--- a/src/Xutim/Bundle/AnalyticsBundle/templates/admin/analytics/page_detail.html.twig
+++ b/src/Xutim/Bundle/AnalyticsBundle/templates/admin/analytics/page_detail.html.twig
@@ -40,7 +40,14 @@
         <div class="col-6 col-xl">
             <div class="card">
                 <div class="card-body">
-                    <div class="subheader">{{ 'Pageviews'|trans({}, 'admin') }}</div>
+                    <div class="subheader">
+                        <span
+                            class="help-hint"
+                            title="{{ 'Total number of times pages were loaded'|trans({}, 'admin') }}"
+                        >
+                            {{ 'Pageviews'|trans({}, 'admin') }}
+                        </span>
+                    </div>
                     <div class="d-flex align-items-baseline">
                         <div class="h1 mb-0 me-2">{{ pageStats.pageviews|default(0)|number_format }}</div>
                         {{ _self.change_indicator(pageStats.pageviews|default(0), prevPageStats.pageviews|default(0), false) }}
@@ -51,7 +58,14 @@
         <div class="col-6 col-xl">
             <div class="card">
                 <div class="card-body">
-                    <div class="subheader">{{ 'Visitors'|trans({}, 'admin') }}</div>
+                    <div class="subheader">
+                        <span
+                            class="help-hint"
+                            title="{{ 'Unique visitors identified by browser session'|trans({}, 'admin') }}"
+                        >
+                            {{ 'Visitors'|trans({}, 'admin') }}
+                        </span>
+                    </div>
                     <div class="d-flex align-items-baseline">
                         <div class="h1 mb-0 me-2">{{ pageStats.uniqueVisitors|default(0)|number_format }}</div>
                         {{ _self.change_indicator(pageStats.uniqueVisitors|default(0), prevPageStats.uniqueVisitors|default(0), false) }}
@@ -62,7 +76,14 @@
         <div class="col-6 col-xl">
             <div class="card">
                 <div class="card-body">
-                    <div class="subheader">{{ 'Bounce Rate'|trans({}, 'admin') }}</div>
+                    <div class="subheader">
+                        <span
+                            class="help-hint"
+                            title="{{ 'Visitors who left after viewing only one page'|trans({}, 'admin') }}"
+                        >
+                            {{ 'Bounce Rate'|trans({}, 'admin') }}
+                        </span>
+                    </div>
                     <div class="d-flex align-items-baseline">
                         <div class="h1 mb-0 me-2">{{ bounceRate ? (bounceRate|number_format(0) ~ '%') : '-' }}</div>
                         {{ _self.change_indicator(bounceRate, prevBounceRate, true) }}
@@ -73,7 +94,14 @@
         <div class="col-6 col-xl">
             <div class="card">
                 <div class="card-body">
-                    <div class="subheader">{{ 'Avg. Scroll Depth'|trans({}, 'admin') }}</div>
+                    <div class="subheader">
+                        <span
+                            class="help-hint"
+                            title="{{ 'Average percentage of page content scrolled'|trans({}, 'admin') }}"
+                        >
+                            {{ 'Avg. Scroll Depth'|trans({}, 'admin') }}
+                        </span>
+                    </div>
                     <div class="d-flex align-items-baseline">
                         <div class="h1 mb-0 me-2">{{ pageStats.avgScrollDepth ? (pageStats.avgScrollDepth|number_format(0) ~ '%') : '-' }}</div>
                         {{ _self.change_indicator(pageStats.avgScrollDepth|default(0), prevPageStats.avgScrollDepth|default(0), false) }}
@@ -84,7 +112,14 @@
         <div class="col-6 col-xl">
             <div class="card">
                 <div class="card-body">
-                    <div class="subheader">{{ 'Avg. Load Time'|trans({}, 'admin') }}</div>
+                    <div class="subheader">
+                        <span
+                            class="help-hint"
+                            title="{{ 'Average time for page to fully load'|trans({}, 'admin') }}"
+                        >
+                            {{ 'Avg. Load Time'|trans({}, 'admin') }}
+                        </span>
+                    </div>
                     <div class="d-flex align-items-baseline">
                         <div class="h1 mb-0 me-2">{{ pageStats.avgLoadTime ? ((pageStats.avgLoadTime / 1000)|number_format(1) ~ 's') : '-' }}</div>
                         {{ _self.change_indicator(pageStats.avgLoadTime|default(0), prevPageStats.avgLoadTime|default(0), true) }}
