--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/_page_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/_page_sidebar.html.twig
@@ -71,6 +71,21 @@
                 </twig:block>
             </twig:Xutim:Admin:SidebarItem>
 
+            {% set effectiveUpdatedAt = (draft is defined and draft and draft.updatedAt > translation.updatedAt) ? draft.updatedAt : translation.updatedAt %}
+            <twig:Xutim:Admin:SidebarItem>
+                <twig:block name="header">
+                    {{ 'updated at'|trans({}, 'admin')|capitalize }}:
+                </twig:block>
+                <twig:block name="content">
+                    <span
+                        title="{{ effectiveUpdatedAt|date('d/m/Y H:i') }}"
+                        data-controller="tooltip"
+                    >
+                        {{ effectiveUpdatedAt|time_ago }}
+                    </span>
+                </twig:block>
+            </twig:Xutim:Admin:SidebarItem>
+
             <twig:Xutim:Admin:SidebarItem>
                 <twig:block name="header">
                     {{ 'revisions'|trans({}, 'admin')|capitalize }}:
