fix(core): pass locale variable to file diff template

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/content_diff.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_fragment/content_diff.html.twig
@@ -91,7 +91,7 @@
             }}
         {% elseif fragment.type == 'xutimFile' %}
             {{
-                include('@XutimCore/admin/content_fragment/diff/xutim_file_diff.html.twig', {fragment: fragment, meta: meta, op: opEff})
+                include('@XutimCore/admin/content_fragment/diff/xutim_file_diff.html.twig', {fragment: fragment, meta: meta, op: opEff, locale: locale})
             }}
         {% elseif fragment.type == 'imageRow' %}
             {{
