--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_reference_diff.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_reference_diff.html.twig
@@ -28,7 +28,7 @@
     <div class="mb-3">
         <label class="form-label fw-bold">{{ 'Content'|trans({}, 'admin') }}</label>
         <div class="mt-2">
-            {{ include('@XutimCore/admin/content_fragment/content_diff.html.twig', {rows: contentRows}) }}
+            {{ include('@XutimCore/admin/content_fragment/content_diff.html.twig', {rows: contentRows, locale: content_context_language()}) }}
         </div>
     </div>
 </div>
