--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
@@ -334,6 +334,17 @@
                     </div>
                 </div>
             </div>
+
+            <div class="py-3 bg-white border-top px-4" style="position: sticky; bottom: 0; z-index: 10;">
+                <twig:Xutim:Admin:Button
+                    type="submit"
+                    variant="primary"
+                    form="{{ form.vars.id }}"
+                    :disabled="form.vars.disabled"
+                >
+                    {{ 'submit'|trans({}, 'admin') }}
+                </twig:Xutim:Admin:Button>
+            </div>
         </div>
     </div>
 {% endblock %}
