refactor(core,media): remove LiipImagine dependency
Delete ImageFilterExtension, move xutim_image_file_from_id
filter to MediaBundle. Remove filter_sets config, liip_filters,
and all LiipImagine bundle/route/config references.

CoreBundle now prepends thumb_small/thumb_large presets into
MediaBundle via prependExtensionConfig.

Fix Editor.js plugins (XutimImageTool, ImageRowTool) to use
thumbnailUrl with onerror fallback and save variant URLs
from dataset instead of img.src.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/form/_file_widget.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/form/_file_widget.html.twig
@@ -1,8 +1,6 @@
 {% block file_widget %}
     {% set data = form.file.vars.data %}
-    {%
-        set previewUrl = data ? uploaded_asset(data.originalPath)|imagine_filter('front_preview') : ''
-    %}
+    {% set previewUrl = data ? media_url(data, 'thumb_small') : '' %}
     <div
         data-controller="media-field"
         data-media-field-url-value="{{ admin_path('admin_json_image_list') }}"
